add_executable(roman_numeral_test catch_main.cc roman_numeral_test.cc)
target_link_libraries(roman_numeral_test PRIVATE catch2::catch roman_numeral)
add_test(roman_numeral_test roman_numeral_test)

add_executable(roman_numeral_doctest roman_numeral_doctest.cc)
target_link_libraries(roman_numeral_doctest PRIVATE doctest::doctest roman_numeral)
add_test(roman_numeral_doctest roman_numeral_doctest)